Write class file version 60.0 instead of 60.65535 for Java 16